fix image loading

--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
 </head>
 <body>
     <script type="text/javascript" src="js/game.js"></script>
+
+    <img src="assets/lambda.png" id="lambda" style="display:none;">
+    <img src="assets/sky.png" id="sky" style="display:none;">
 </body>
 </html>
